<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EngineersReference</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button1">Relay Device Numbers</string>
    <string name="button2">Pipe Dimensional Data </string>
    <string name="button3">Flange Dimensional Data </string>
    <string name="button4">High Voltage Clearances</string>
    <string name="button5">Conversions</string>
    <string name="button6">Pump/Motor Data</string>
    <string name="relaynumbutton">Enter number</string>
    <string name="contents">Available References</string>
    <string name="relaynum">Get Definition of Relay Device</string>
    <string name="title_activity_pipesizedata">Pipesizedata</string>
    <string name="title_activity_flange_data">FlangeData</string>
    <string name="title_activity_safe_high_voltage_clearances">SafeHighVoltageClearances</string>
    <string name="title_activity_conversions">Conversions</string>
    <string name="title_activity_pump_motor_data">PumpMotorData</string>

    <string-array name="contents_array">
        <item>Relay Device Numbers</item>
        <item>Pipe Data by Size</item>
        <item>Flange Data by Size</item>
        <item>Electrical Tests</item>
        <item>Conversions</item>
        <item>Pump Motor Data</item>
    </string-array>

    <string name="title_activity_flash_steam_calculator">FlashSteamCalculator</string>
    <string name="title_activity_vibration">Vibration</string>
    <string name="FlashSteam">Click for percentage of flashsteam</string>

</resources>